cmake_minimum_required(VERSION 3.1)
project(TestScenes)

#-DSOFA_EXTERNAL_DIRECTORIES=/media/data/sources/bakpaul/TestScenes

set(CMAKE_CXX_FLAGS -Wl,--no-as-needed)
add_compile_options(-Wno-error=deprecated-declarations)
set(CMAKE_BUILD_TYPE RelWithDebInfo CACHE STRING "FORCE VALUE" FORCE)
#set(CMAKE_CUDA_COMPILER /usr/local/cuda/bin/nvcc CACHE STRING "FORCE VALUE" FORCE)
#set(CMAKE_CUDA_COMPILER /usr/local/cuda/bin/nvcc CACHE STRING "FORCE VALUE" FORCE)


#SOFA settings
set(SOFA_ENABLE_LEGACY_HEADERS OFF CACHE BOOL "FORCE VALUE" FORCE)
set(COLLECTION_SOFAGUIQT OFF CACHE BOOL "FORCE VALUE" FORCE)
set(PLUGIN_SOFA_GUI_QT ON CACHE BOOL "FORCE VALUE" FORCE)
set(SOFA_BUILD_TESTS OFF CACHE BOOL "FORCE VALUE" FORCE)
set(SOFA_BUILD_METIS ON CACHE BOOL "FORCE VALUE" FORCE)
set(SOFA_USE_MASK OFF CACHE BOOL "FORCE VALUE" FORCE)
set(APPLICATION_MODELER OFF CACHE BOOL "FORCE VALUE" FORCE)
set(SOFA_BUILD_SCENECREATOR OFF CACHE BOOL "FORCE VALUE" FORCE)
set(SOFAGUI_ENABLE_QWT OFF CACHE BOOL "FORCE VALUE" FORCE)
set(PLUGIN_MULTITHREADING ON CACHE BOOL "FORCE VALUE" FORCE)
set(PLUGIN_IMAGE OFF CACHE BOOL "FORCE VALUE" FORCE)
set(PLUGIN_DIFFUSIONSOLVER OFF CACHE BOOL "FORCE VALUE" FORCE)
set(SOFATERMINAL_BUILD_BINDINGS OFF CACHE BOOL "FORCE VALUE" FORCE)
set(SOFA_TRACY ON CACHE BOOL "FORCE VALUE" FORCE)

#set(SOFA_FETCH_CGALPLUGIN ON CACHE BOOL "FORCE VALUE" FORCE)
#set(PLUGIN_CGALPLUGIN ON CACHE BOOL "FORCE VALUE" FORCE)

#set(SOFA_FETCH_REGRESSION ON CACHE BOOL "FORCE VALUE" FORCE)
#set(APPLICATION_REGRESSION_TEST ON CACHE BOOL "FORCE VALUE" FORCE)

#set(SOFA_FETCH_BEAMADAPTER ON CACHE BOOL "FORCE VALUE" FORCE)
#set(PLUGIN_BEAMADAPTER ON CACHE BOOL "FORCE VALUE" FORCE)

set(SOFA_FETCH_SOFAPYTHON3 ON CACHE BOOL "FORCE VALUE" FORCE)
set(PLUGIN_SOFAPYTHON3 ON CACHE BOOL "FORCE VALUE" FORCE)

#set(SOFA_FETCH_SOFTROBOTS ON CACHE BOOL "FORCE VALUE" FORCE)
#set(PLUGIN_SOFTROBOTS ON CACHE BOOL "FORCE VALUE" FORCE)

set(SOFA_FETCH_SOFAGLFW OFF CACHE BOOL "FORCE VALUE" FORCE)
set(PLUGIN_SOFAGLFW OFF CACHE BOOL "FORCE VALUE" FORCE)
set(APPLICATION_RUNSOFAGLFW OFF CACHE BOOL "FORCE VALUE" FORCE)
#set(PLUGIN_SOFAIMGUI ON CACHE BOOL "FORCE VALUE" FORCE)

#set(SOFACUDA_CUBLAS ON CACHE BOOL "FORCE VALUE" FORCE)
#set(SOFACUDA_DOUBLE ON CACHE BOOL "FORCE VALUE" FORCE)
#set(PLUGIN_SOFACUDA ON CACHE BOOL "FORCE VALUE" FORCE)
#set_target_properties(SofaCUDA PROPERTIES CUDA_ARCHITECTURES "sm_86")

#add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../../bakpaul/sofaros2plugin "Plugin/sofaros2plugin")
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../../bakpaul/SofaSlicer "Plugin/SofaSlicer")
#add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../../bakpaul/SofaSlicer "Plugin/SofaSlicer")
